--- a/2_JS+HTML+CSS/2_Responsive_Layout/style.css
+++ b/2_JS+HTML+CSS/2_Responsive_Layout/style.css
@@ -15,11 +15,17 @@ header {
     color: white;
 }
 
-/* Create two columns/boxes that floats next to each other */
+/* Container for flexboxes */
+section {
+    display: -webkit-flex;
+    display: flex;
+}
+
+/* Style the navigation menu */
 nav {
-    float: left;
-    width: 30%;
-    height: 300px; /* only for demonstration, should be removed */
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
     background: #ccc;
     padding: 20px;
 }
@@ -30,19 +36,13 @@ nav ul {
     padding: 0;
 }
 
+/* Style the content */
 article {
-    float: left;
-    padding: 20px;
-    width: 70%;
+    -webkit-flex: 3;
+    -ms-flex: 3;
+    flex: 3;
     background-color: #f1f1f1;
-    height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-    content: "";
-    display: table;
-    clear: both;
+    padding: 10px;
 }
 
 /* Style the footer */
@@ -53,11 +53,11 @@ footer {
     color: white;
 }
 
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
-    nav, article {
-        width: 100%;
-        height: auto;
+    section {
+        -webkit-flex-direction: column;
+        flex-direction: column;
     }
 }
 
