--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/style.css
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/style.css
@@ -25,15 +25,17 @@ h2 {
 #home {
     text-align: center;
     /* ... */
-    width: 80%;
-    border: 5px;
+    width: 60%;
+    border: 5%;
     border-radius: 12px;
+    border-style: solid;
+    border-color: cornflowerblue;
     padding: 5%;
     /* ... */
-    margin-top: 7%;
+    margin-top: 5%;
     margin-bottom: 5%;
-    margin-right: 4%;
-    margin-left: 4%;
+    margin-right: 15%;
+    margin-left: 15%;
 }
 
 #show {
