--- a/0_Python/0_Frameworks_/0_flask/0.1_Tabuada/templates/index.html
+++ b/0_Python/0_Frameworks_/0_flask/0.1_Tabuada/templates/index.html
@@ -16,7 +16,10 @@
 
     <h2><span style="color: red;">{%print(2+2)%}</span></h2>
 
-    {%print(5*5)%}
+    {%print("-"*15)%}<br>
+    {%print("-"*15)%}<br>
+    {%print("-"*15)%}<br>
+
 </body>
 
 </html>
