--- a/1_Frameworks/0_Frameworks_Py/1_Flask/1_webserver/templates/index.html
+++ b/1_Frameworks/0_Frameworks_Py/1_Flask/1_webserver/templates/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <h2>Meu primeiro web server python</h2>
+    <p style="text-align: center;">Hello Server on flask</p>
 
-    <p><span></span>Olá Mundo</p>
+    <p>Olá Mundo</p>
 
     <h2><span style="color: red;">{%print(2+2)%}</span></h2>
 
