--- a/0_Javascript/_Projetos_FRONT/0_LoginJS/style.css
+++ b/0_Javascript/_Projetos_FRONT/0_LoginJS/style.css
@@ -1,10 +1,14 @@
-h2 {
+body {
+    text-align: center;
+}
+
+/* h2 {
     text-align: center;
 }
 
 #p_login {
     text-align: center;
-}
+} */
 
 #b_entrar {
     text-align: center;
@@ -18,11 +22,10 @@ h2 {
     color: red;
 }
 
+/*
 #home {
     text-align: center;
-    /* ... */
     width: 60%;
-    /* ... */
     margin-top: 5%;
     margin-bottom: 5%;
     margin-right: 15%;
@@ -32,8 +35,8 @@ h2 {
     border-style: solid;
     border-color: cornflowerblue;
     padding: 5%;
-}
-
+}*/
+/* 
 #show {
     color: blue;
     text-decoration: underline blue;
@@ -42,4 +45,4 @@ h2 {
     margin: 0;
     padding: 0;
     cursor: pointer;
-}
+} */
