--- a/6_OpenSource/0_temp_bootstrap/style.css
+++ b/6_OpenSource/0_temp_bootstrap/style.css
@@ -1,3 +1,10 @@
 #main {
     margin-top: 2em;
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+  }
