--- a/6_OpenSource_ALL/01_BootStrap WebSite/style.css
+++ b/6_OpenSource_ALL/01_BootStrap WebSite/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 #main {
     margin-top: 2em;
 }
@@ -7,4 +11,4 @@
     bottom: 20px;
     right: 20px;
     display: none;
-  }
+}
