--- a/6_OpenSource_ALL/01_HTML_Responsive_Web_Page/style.css
+++ b/6_OpenSource_ALL/01_HTML_Responsive_Web_Page/style.css
@@ -33,9 +33,11 @@
 }
 
 @media only screen and (max-width: 620px) {
+
     /* For mobile phones: */
-        .menu, .main, .right {
+    .menu,
+    .main,
+    .right {
         width: 100%;
     }
 }
-
