--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
@@ -310,3 +310,16 @@
 
 /*mobile reponsive*/
 
+@media screen and (max-width: 768px) {
+    .main__container {
+        display: grid;
+        grid-template-columns: auto;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        margin: 0 auto;
+        height: 90vh;
+    }
+
+
+}
