--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
@@ -361,3 +361,47 @@
         margin: 2.5rem 0;
     }
 }
+
+/* Services section CSS */
+
+.services {
+    background: #141414;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.services h1 {
+    background-color: #ff8177;
+    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+    background-size: 100%;
+    margin-bottom: 5rem;
+    font-size: 2.5rem;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.services__container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services__card {
+    margin: 1rem;
+    height: 525px;
+    width: 400px;
+    border-radius: 4px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(17, 17, 17, 0.6) 100%),
+        url('images/pic3.jpg');
+    background-size: cover;
+    position: relative;
+    color: #fff;
+}
+
