--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
@@ -330,27 +330,27 @@
         font-size: 2.5rem;
         margin-top: 2rem;
     }
-    
+
     .main__content h2 {
         font-size: 3rem;
     }
-    
+
     .main__content p {
         margin-top: 1rem;
         font-size: 1.5rem;
     }
 }
 
-@media screen and (max-width: 480px) {    
+@media screen and (max-width: 480px) {
     .main__content h1 {
         font-size: 2rem;
         margin-top: 3rem;
     }
-    
+
     .main__content h2 {
         font-size: 2rem;
     }
-    
+
     .main__content p {
         margin-top: 2rem;
         font-size: 1.5rem;
@@ -395,10 +395,9 @@
     height: 525px;
     width: 400px;
     border-radius: 4px;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(0,0,0,0) 0%,
-        rgba(17, 17, 17, 0.6) 100%),
+    background-image: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(17, 17, 17, 0.6) 100%),
         url('images/pic3.jpg');
     background-size: cover;
     position: relative;
@@ -406,10 +405,9 @@
 }
 
 .services__card:nth-child(2) {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(0,0,0,0) 0%,
-        rgba(17, 17, 17, 0.6) 100%),
+    background-image: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(17, 17, 17, 0.6) 100%),
         url('images/pic4.jpg');
 }
 
@@ -445,3 +443,29 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 960px) {
+    .services {
+        height: 1600px;
+    }
+
+    .services h1 {
+        font-size: 2rem;
+        margin-top: 12rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .services {
+        height: 1400px;
+    }
+
+    .services h1 {
+        font-size: 1.2rem;
+    }
+
+    .services__card {
+        width: 300px;
+    }
+}
+
+/* Footer CSS */
