--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/styles.css
@@ -469,3 +469,22 @@
 }
 
 /* Footer CSS */
+
+.footer__container {
+    background-color: #141414;
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer__logo {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+}
+
