--- a/0_temp_conding/00_CSS/p0 v2/style.css
+++ b/0_temp_conding/00_CSS/p0 v2/style.css
@@ -13,6 +13,7 @@ body {
 
 .container {
     background: #dcdcdc;
+
     width: 100%;
     height: 100%;
 
@@ -51,5 +52,16 @@ body {
 .footer {
     background: #00f;
     grid-area: f;
+}
+
+/* Responsivo */
+
+@media only screen and (max-width: 820px) {
+    
+    .container {
+        grid-template-areas: "h" "r" "m" "l" "f";
+        grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
 }
 
