--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v5_web_dev/style.css
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v5_web_dev/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -87,7 +88,16 @@ li {
     display: inline;
 }
 
-.sobre {
+.nav-item {
+    text-decoration: none;
+    color: white;
+}
+
+.nav-item:hover {
+    color: cornflowerblue;
+}
+
+#about {
     float: right;
     margin-right: 1rem;
 }
@@ -98,6 +108,40 @@ li {
     border-radius: 25px;
     padding: 10px;
     box-shadow: 5px 10px 8px #888888;
+}
+
+#myBtn {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 20px;
+    /* Place the button at the bottom of the page */
+    right: 30px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: #0473ba;
+    /* Set a background color */
+    color: white;
+    /* Text color */
+    cursor: pointer;
+    /* Add a mouse pointer on hover */
+    padding: 15px;
+    /* Some padding */
+    border-radius: 10px;
+    /* Rounded corners */
+    font-size: 18px;
+    /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555;
+    /* Add a dark-grey background on hover */
 }
 
 /* Responsivo */
@@ -124,7 +168,7 @@ li {
     }
 
     .container {
-        grid-template-areas: "h""r""m""l""f";
+        grid-template-areas: "h""l""m""r""f";
         grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
         grid-template-columns: 1fr;
     }
