--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/style.css
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/style.css
@@ -125,7 +125,7 @@ li {
     /* Remove borders */
     outline: none;
     /* Remove outline */
-    background-color: #0473ba;
+    background-color: cadetblue;
     /* Set a background color */
     color: white;
     /* Text color */
