--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/style.css
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/style.css
@@ -115,9 +115,38 @@ li {
     /* Hidden by default */
     position: fixed;
     /* Fixed/sticky position */
-    bottom: 20px;
+    bottom: 10px;
     /* Place the button at the bottom of the page */
-    right: 50px;
+    right: 70px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: cadetblue;
+    /* Set a background color */
+    color: white;
+    /* Text color */
+    cursor: pointer;
+    /* Add a mouse pointer on hover */
+    padding: 15px;
+    /* Some padding */
+    border-radius: 10px;
+    /* Rounded corners */
+    font-size: 18px;
+    /* Increase font size */
+}
+
+#myBtn2 {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 10px;
+    /* Place the button at the bottom of the page */
+    left: 70px;
     /* Place the button 30px from the right */
     z-index: 99;
     /* Make sure it does not overlap */
@@ -173,9 +202,17 @@ li {
         grid-template-columns: 1fr;
     }
 
-    #myBtn {
-        /* Place the button at the bottom of the page */
+    /* #myBtn {
+        
         right: 30px;
+    } */
+
+    #myBtn {
+        right: 30px;
+    }
+
+    #myBtn2 {
+        left: 30px;
     }
 }
 
