--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
@@ -7,8 +7,8 @@
     font-size: 1em;
     color: blue;
 
-    margin-top: 7em;
-    margin-bottom: 7em;
+    margin-top: 6em;
+    margin-bottom: 6em;
     margin-left: 10em;
     margin-right: 10em;
 
@@ -17,13 +17,13 @@
     padding-left: 20em;
     padding-right: 20em;
 
-    /* border-style: solid;
-    border-color: black; */
+    border-style: solid;
+    border-color: black;
 }
 
 #form {
-    /* border-style: solid;
-    border-color: black; */
+    border-style: solid;
+    border-color: black;
     text-align: center;
     padding-top: 3em;
     padding-bottom: 3em;
@@ -39,8 +39,8 @@
 @media only screen and (max-width: 1300px) {
     #sistema {
 
-        margin-top: 7em;
-        margin-bottom: 7em;
+        margin-top: 5em;
+        margin-bottom: 5em;
         margin-left: 8em;
         margin-right: 8em;
 
@@ -57,8 +57,8 @@
 @media only screen and (max-width: 900px) {
     #sistema {
 
-        margin-top: 7em;
-        margin-bottom: 7em;
+        margin-top: 5em;
+        margin-bottom: 5em;
         margin-left: 2em;
         margin-right: 2em;
 
