--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
@@ -17,23 +17,22 @@
     padding-left: 20em;
     padding-right: 20em;
 
-    border-style: solid;
-    border-color: black;
+    /* border-style: solid;
+    border-color: black; */
 }
 
 #form {
-    border-style: solid;
-    border-color: black;
+    /* border-style: solid;
+    border-color: black; */
     text-align: center;
     padding-top: 3em;
     padding-bottom: 3em;
 }
 
-#btn-entrar {
+.btn-editar {
     color: white;
     background-color: blue;
-    width: 100%;
-    height: 40px;
+    /* width: 100%; */
 }
 
 @media only screen and (max-width: 1300px) {
