--- a/8_OpenSource_ALL/SISCRUD/frontend/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/style.css
@@ -17,13 +17,13 @@
     padding-left: 20em;
     padding-right: 20em;
 
-    border-style: solid;
-    border-color: black;
+    /* border-style: solid;
+    border-color: black; */
 }
 
 #form {
-    border-style: solid;
-    border-color: black;
+    /* border-style: solid;
+    border-color: black; */
     text-align: center;
     padding-top: 3em;
     padding-bottom: 3em;
