--- a/8_OpenSource_ALL/SISCRUD/frontend/cadastro/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/cadastro/style.css
@@ -7,13 +7,13 @@
     font-size: 1em;
     color: blue;
 
-    margin-top: 6em;
-    margin-bottom: 6em;
+    margin-top: 2em;
+    margin-bottom: 2em;
     margin-left: 10em;
     margin-right: 10em;
 
-    padding-top: 3em;
-    padding-bottom: 3em;
+    padding-top: 2em;
+    padding-bottom: 2em;
     padding-left: 20em;
     padding-right: 20em;
 
@@ -25,13 +25,13 @@
     /* border-style: solid;
     border-color: black; */
     text-align: center;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
-#btn-entrar {
+#btn-cadastrar {
     color: white;
-    background-color: blue;
+    background-color: green;
     width: 100%;
     height: 40px;
 }
@@ -39,13 +39,13 @@
 @media only screen and (max-width: 1300px) {
     #sistema {
 
-        margin-top: 5em;
-        margin-bottom: 5em;
+        margin-top: 1em;
+        margin-bottom: 1em;
         margin-left: 8em;
         margin-right: 8em;
 
-        padding-top: 3em;
-        padding-bottom: 3em;
+        padding-top: 2em;
+        padding-bottom: 2em;
         padding-left: 12em;
         padding-right: 12em;
 
@@ -57,13 +57,13 @@
 @media only screen and (max-width: 900px) {
     #sistema {
 
-        margin-top: 5em;
-        margin-bottom: 5em;
+        margin-top: 1em;
+        margin-bottom: 1em;
         margin-left: 2em;
         margin-right: 2em;
 
-        padding-top: 3em;
-        padding-bottom: 3em;
+        padding-top: 2em;
+        padding-bottom: 2em;
         padding-left: 6em;
         padding-right: 6em;
 
@@ -75,13 +75,13 @@
 @media only screen and (max-width: 500px) {
 
     body {
-        font-size: 0.9em;
+        font-size: 0.75em;
     }
 
     #sistema {
 
         margin-top: 1em;
-        margin-bottom: 1em;
+        margin-bottom: 0;
         margin-left: 2em;
         margin-right: 2em;
 
