--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
@@ -25,8 +25,8 @@
     /* border-style: solid;
     border-color: black; */
     text-align: center;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 .btn-ver {
@@ -82,13 +82,13 @@
 
     #sistema {
 
-        margin-top: 1em;
-        margin-bottom: 1em;
+        margin-top: 0.5em;
+        margin-bottom: 0;
         margin-left: 1em;
         margin-right: 1em;
 
-        padding-top: 1em;
-        padding-bottom: 1em;
+        padding-top: 0.5em;
+        padding-bottom: 0;
         padding-left: 1em;
         padding-right: 1em;
 
