--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/style.css
@@ -29,6 +29,23 @@
     padding-bottom: 2em;
 }
 
+input {
+    /* font-size: x-large; */
+    text-align: center;
+    border-radius: 15px;
+    /* margin: 1rem; */
+    border-style: solid;
+
+    box-shadow: 3px 3px 3px #888888;
+}
+
+button {
+    /* font-size: x-large; */
+    text-align: center;
+    border-radius: 15px;
+    /* margin: 1rem; */
+}
+
 .btn-ver {
     color: white;
     background-color: blue;
@@ -50,7 +67,8 @@
 .btn-cadastrar {
     color: white;
     background-color: #2cc705;
-    /* width: 100%; */
+    height: 40px;
+    width: 300px;
 }
 
 @media only screen and (max-width: 1300px) {
