--- a/8_OpenSource_ALL/SISCRUD/frontend/style.css
+++ b/8_OpenSource_ALL/SISCRUD/frontend/style.css
@@ -29,11 +29,32 @@
     padding-bottom: 2em;
 }
 
+input {
+    /* font-size: x-large; */
+    text-align: center;
+    border-radius: 15px;
+    /* margin: 1rem; */
+    border-style: solid;
+
+    box-shadow: 3px 3px 3px #888888;
+}
+
+button {
+    /* font-size: x-large; */
+    text-align: center;
+    border-radius: 15px;
+    /* margin: 1rem; */
+}
+
 #btn-entrar {
     color: white;
-    background-color: blue;
+    background-color: rgb(0, 0, 158);
     width: 100%;
     height: 40px;
+}
+
+#btn-entrar:hover {
+    background-color: rgb(48, 48, 255);
 }
 
 @media only screen and (max-width: 1300px) {
