--- a/0_temp_conding/0_php_mysql/3_PDO_InsertFORM/style.css
+++ b/0_temp_conding/0_php_mysql/3_PDO_InsertFORM/style.css
@@ -47,7 +47,7 @@ button {
     /* margin: 1rem; */
 }
 
-#btn-cadastrar {
+.btn-cadastrar {
     color: white;
     background-color: green;
     width: 50%;
