--- a/0_temp_conding/1_php_bootstrap_mysql/style.css
+++ b/0_temp_conding/1_php_bootstrap_mysql/style.css
@@ -3,15 +3,15 @@
 .teste {
     color: #212529;
     text-align: center;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    /* margin-top: 2%;
+    margin-bottom: 2%; */
 }
 
 .navcss {
-    /* margin-top: 3%; */
+    margin-top: 1%;
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
 }
 .navcss2 {
     border-radius: 7px;
@@ -27,7 +27,14 @@
 }
 
 .select {
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 1%;
+    margin-bottom: 0;
     text-align: center;
+}
+
+.tablecss {
+    margin-top: 3%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 3%;
 }
