--- a/0_temp_conding/0_git_bootstrap_template/mytemplate/style.css
+++ b/0_temp_conding/0_git_bootstrap_template/mytemplate/style.css
@@ -10,6 +10,18 @@ body::before {
   border-radius: 10px;
 }
 
+.mytest {
+  margin: 8%;
+}
+
+.imgtestecss {
+  margin: 4%;
+}
+
+.imghugo {
+  object-fit: cover;
+}
+
 @media (min-width: 768px) {
   .news-input {
     width: 50%;
