--- a/0_temp_conding/1_php_bootstrap_mysql/style.css
+++ b/0_temp_conding/1_php_bootstrap_mysql/style.css
@@ -38,3 +38,22 @@
     margin-right: 20%;
     margin-bottom: 3%;
 }
+
+footer {
+    /* position:absolute; */
+    bottom:0;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    background:#6cf;
+ }
+
+@media only screen and (max-width: 780px) {
+
+    .th_nome {
+        display: none;
+    }
+
+    .th_email {
+        display: none;
+    }
+}
