--- a/7_FULLSTACK_ALL/1_PHP+Laravel/1_php_CRUD/2-CRUD-freecode/0-bad/app.css
+++ b/7_FULLSTACK_ALL/1_PHP+Laravel/1_php_CRUD/2-CRUD-freecode/0-bad/app.css
@@ -1,3 +1,31 @@
 body {
-    padding: 50px;
+    padding: 10%;
+}
+
+h1 {
+    text-align: center;
+}
+
+.container_btn {
+    height: 7rem;
+    position: relative;
+    /* border: 3px solid green; */
+  }
+  
+.center_btn {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 500px) {
+    body {
+        padding: 2%;
+    }
+    #c_date {
+        display: none;
+    }
 }
