--- a/7_FULLSTACK_ALL/1_PHP+Laravel/1_php_CRUD/2-CRUD-freecode/0-bad/app.css
+++ b/7_FULLSTACK_ALL/1_PHP+Laravel/1_php_CRUD/2-CRUD-freecode/0-bad/app.css
@@ -1,5 +1,8 @@
 body {
-    padding: 10%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 h1 {
