--- a/7_FULLSTACK_ALL/1_PHP+Laravel/1_php_CRUD/2-CRUD-freecode/0-bad/app.css
+++ b/7_FULLSTACK_ALL/1_PHP+Laravel/1_php_CRUD/2-CRUD-freecode/0-bad/app.css
@@ -9,6 +9,13 @@ h1 {
     text-align: center;
 }
 
+.product-img {
+    width: 50px;
+}
+.product-img-view {
+    width: 120px;
+}
+
 .container_btn {
     height: 5rem;
     position: relative;
