--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá Flask</title>
-    <style>
-        *{
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
 </head>
 <body>
     <p>Olá Mundo! Fui escrito em flask :)</p>
