--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <p>Olá Mundo! Fui escrito em flask :)</p>
+
+    <button onclick="window.location.href='login'">Login</button>
 </body>
 
 </html>
