--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/login.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/login.html
@@ -11,6 +11,8 @@
 
 <body>
     <p>Olá! Esta é a página de login</p>
+
+    <button onclick="window.location.href='/'">Login</button>
 </body>
 
 </html>
