--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/login.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/login.html
@@ -12,7 +12,12 @@
 <body>
     <p>Olá! Esta é a página de login</p>
 
-    <button onclick="window.location.href='/'">Login</button>
+    <button onclick="window.location.href='/'">HOME</button><br><br>
+
+    <label for="">Login:</label><br>
+    <input id="login" type="text"><br>
+    <label for="">Senha:</label><br>
+    <input id="senha" type="password"><br>
 </body>
 
 </html>
