--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>Olá Mundo! Fui escrito em flask :)</p>
+    <p>Olá Mundo! SISPy em flask :)</p>
 
     <button onclick="window.location.href='login'">LOGIN</button>
 </body>
