--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/index.html
@@ -12,7 +12,11 @@
 <body>
     <p>Olá Mundo! SISPy em flask :)</p>
 
-    <button onclick="window.location.href='login'">LOGIN</button>
+    <button onclick="window.location.href='login'">LOGIN</button><br>
+
+    <p>{% print("Olá via print do python") %}</p>
+    <p>2+2={% print(2+2) %}</p>
+
 </body>
 
 </html>
