--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/01_form/templates/index.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/01_form/templates/index.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olá Flask</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-</head>
-
-<body>
-    <p>Olá Mundo! SISPy em flask :)</p>
-
-    <p>{% print("Olá via print do python") %}</p>
-    <p>2+2={% print(2+2) %}</p>
-
-</body>
-
-</html>
+{% block content %}
+<h1>{% block title %} Messages {% endblock %}</h1>
+{% for message in messages %}
+<div class='message'>
+    <h3>{{ message['title'] }}</h3>
+    <p>{{ message['content'] }}</p>
+</div>
+{% endfor %}
+{% endblock %}
