--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/01_form/templates/create.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/01_form/templates/create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>{% block title %} Add a New Message {% endblock %}</h1>
-<form method="post">
+<form style="text-align: center;" method="post">
     <label for="title">Title</label>
     <br>
     <input type="text" name="title" placeholder="Message title" value="{{ request.form['title'] }}"></input>
