--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/login.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/login.html
@@ -18,7 +18,7 @@
     <input id="login" type="text"><br><br>
     <label for="">Senha:</label><br>
     <input id="senha" type="password"><br><br>
-    <button>ENTRAR</button><br><br>
+    <button onclick="window.location.href='sys'">LOGIN</button><br>
 </body>
 
 </html>
