--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/sys.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/00_olaMundo/templates/sys.html
@@ -10,13 +10,11 @@
 </head>
 
 <body>
-    <p>SISPy em flask :)</p>
+    <p>Olá {{ login }}! Bem-vindo</p>
 
-    <button onclick="window.location.href='login'">LOGIN</button><br>
+    <button onclick="window.location.href='/'">HOME</button><br><br>
 
-    <p>{% print("Olá via print do python") %}</p>
-    <p>2+2={% print(2+2) %}</p>
-
+    <button>ENTRAR</button><br><br>
 </body>
 
 </html>
