--- a/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/01_Rotas/templates/index.html
+++ b/7_FULLSTACK_ALL/2_Python_Django+Flask/WEB-1_Flask/01_Rotas/templates/index.html
@@ -12,6 +12,8 @@
 <body>
     <p>SISPy em flask :)</p>
 
+    <button onclick="window.location.href='login'">LOGIN</button><br>
+
     <p>{% print("Olá via print do python") %}</p>
     <p>2+2={% print(2+2) %}</p>
 
