--- a/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/00_codando/00_site/style.css
+++ b/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/00_codando/00_site/style.css
@@ -4,6 +4,10 @@ body{
     font-size: xx-large;
 }
 
+.nav-item{
+    font-size: large;
+}
+
 /* .content {
     max-width: 500px;
     margin: auto;
