--- a/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/00_codando/00_site/style.css
+++ b/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/00_codando/00_site/style.css
@@ -1,26 +1,20 @@
-body{
-    text-align: center;
-    /* margin-top: 5rem; */
-    font-size: xx-large;
-}
-
-.nav-item{
-    font-size: large;
-}
-
-/* .content {
-    max-width: 500px;
-    margin: auto;
-    background: gray;
-    padding: 10px;
-
-    width:270px;
-	height:150px;
-	position:absolute;
-	left:50%;
-	top:50%;
-	margin:-75px 0 0 -135px;
-    border: 5px;
-    border-radius: 5px;
-    background: indigo;
+/* * {
+    margin: 0;
+    padding: 0;
 } */
+
+body {
+    text-align: center;
+}
+p {
+    text-align: justify;
+}
+
+.main-content {
+    /* background-color: red; */
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
