--- a/1_CSS+Front_Frameworks/0_CSS/3_FlexHeaderMenuNav/style.css
+++ b/1_CSS+Front_Frameworks/0_CSS/3_FlexHeaderMenuNav/style.css
@@ -48,7 +48,7 @@ main {
     padding: 4rem 12rem 4rem 12rem;
     margin: .5rem;
     /* background-color: #103240; */
-    border: 1px solid aliceblue;
+    /* border: 1px solid aliceblue; */
     border-radius: 25px;
 }
 
