--- a/my_stack2022/01_django/01_w3s/myworld/members/templates/index.html
+++ b/my_stack2022/01_django/01_w3s/myworld/members/templates/index.html
@@ -22,9 +22,9 @@
         <table class="table" border="1">
             <thead>
                 <tr>
+                    <th class="text-center">ID</th>
                     <th class="text-center">Firstname</th>
                     <th class="text-center">Lastname</th>
-                    <th class="text-center">Email</th>
                     <th colspan="2" class="text-center">Actions</th>
                 </tr>
             </thead>
