--- a/2_JavaScript_Node+Nestjs/GUI_Browser/00_LogicaDeProgramacao/GAME-Pedra_Papel_Tesoura/style.css
+++ b/2_JavaScript_Node+Nestjs/GUI_Browser/00_LogicaDeProgramacao/GAME-Pedra_Papel_Tesoura/style.css
@@ -8,8 +8,8 @@ button{
 }
 
 body {
-    background-color: rgb(32, 32, 32);
-    color: white;
+    /* background-color: rgb(32, 32, 32);
+    color: white; */
     text-align: center;
     font-size: x-large;
 }
