--- a/0_DS_2022/0_logica_DS_2022/javascript/2_JS/7_Math_Random/style.css
+++ b/0_DS_2022/0_logica_DS_2022/javascript/2_JS/7_Math_Random/style.css
@@ -7,8 +7,8 @@ input{
 }
 
 body {
-    background-color: rgb(32, 32, 32);
-    color: white;
+    /* background-color: rgb(32, 32, 32);
+    color: white; */
     text-align: center;
     font-size: xx-large;
 }
